# puccinia-basic-poc

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  mix.exs
assets/: build.js  build.mjs  package-lock.json
assets/js/: app.js  main.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: puccinia_basic_poc.ex  puccinia_basic_poc_web.ex
lib/mix/tasks/: build.wasm.ex
lib/puccinia_basic_poc/: application.ex  mailer.ex  nif.ex
lib/puccinia_basic_poc_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/puccinia_basic_poc_web/controllers/: page_controller.ex
lib/puccinia_basic_poc_web/templates/layout/: root.html.heex
lib/puccinia_basic_poc_web/templates/page/: index.html.heex
lib/puccinia_basic_poc_web/views/: error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex
native/pucciniabasicpoc_nif/: Cargo.toml
native/pucciniabasicpoc_nif/src/: lib.rs  wasm.rs
native/pucciniabasicpoc_rs/: Cargo.toml  README.md
native/pucciniabasicpoc_rs/src/: logic.rs  nif.rs  wasm.rs
test/puccinia_basic_poc_web/controllers/: page_controller_test.exs
test/puccinia_basic_poc_web/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
test/support/: channel_case.ex  conn_case.ex
