[package]
authors = []
edition = "2018"
name = "pucciniabasicpoc_nif"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "pucciniabasicpoc_nif"
path = "src/lib.rs"

[features]
default = ["console_error_panic_hook"]

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rustler = "0.22.0"
rustler_sys = "2.1.1"

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = {version = "0.1.6", optional = true}
wasm-bindgen = "0.2.63"
wee_alloc = {version = "0.4.5", optional = true}

[dependencies]
#rustler = {version = "0.22.0", optional = true}
#rustler_sys = {version = "2.1.1", optional = true}

#wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = {version = "0.1.6", optional = true}

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = {version = "0.4.5", optional = true}

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
